--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    height: 100%;
 }
 
 body {
@@ -14,7 +13,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 15%;
+    height: 150px;
     width: 100%;
     background-color: #3347B0;
 }
@@ -41,7 +40,6 @@ header button:hover{
 
 main{
     background-color: white;
-    height: 65%;
     width: 100%;
     display: flex;
     padding: 2%;
@@ -50,7 +48,6 @@ main{
 
 .tela1{
     display: flex;
-    height: 100%;
     width: 100%;
 }
 
@@ -91,7 +88,6 @@ main{
     width: auto;
 }
 .container3{
-    height: 100%;
     width: 35%;
     display: flex;
     flex-direction: column;
@@ -119,20 +115,15 @@ main{
 }
 
 .container3 button :hover{
-    transform: translateY(-2px);
-}
-
-.container3 button h1{
-    margin-top: 25%;
+    background-color: #6B7EF5;
 }
 
 .container3 img{
-    height: 60%;
+    height: 40%;
     width: auto;
 }
 
 .tela2{
-    background-color: brown;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -145,10 +136,10 @@ main{
     display: flex;
     justify-content: center;
     font-size: x-large;
+    color: #3347B0;
 }
 
 .alunos {
-    background-color: green;
     display: flex;
     flex-wrap: wrap;
     padding: 1%;
@@ -161,6 +152,8 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    text-align: center;
     background-color: #3347B0;
     border-radius: 5px;
     height: 40%;
@@ -171,13 +164,71 @@ main{
 }
 
 .card img{
-    height: 80%;
+    height: 60%;
     width: auto;
     border-radius: 50%;
 }
 
+.tela3{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding: 2%;
+}
+
+.perfil, .estatisticas{
+    height: 550px;
+    width: 650px;
+    box-shadow: 5px 5px 25px black;
+}
+
+.perfil{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 4%;
+}
+
+.perfil img{
+    height: 60%;
+    border-radius: 50%;
+    border: 0.5px solid black;
+}
+
+.estatisticas{
+    display: flex;
+    flex-direction: row;
+    padding: 5%;
+    justify-content: space-between;
+}
+
+.barra1, .barra2, .barra3, .barra4, .barra5, .barra6{
+    height: 100%;
+    width: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    font-size: large;
+}
+
+.coluna{
+    height: 85%;
+    width: 60%;
+    border: 0.5px solid black;
+    display: flex;
+    align-items: flex-end;
+}
+
+.preenchimento{
+    width: 100%;
+    height: 90%;
+    background-color: #3347B0;
+}
+
 footer{
-    height: 20%;
+    height: 200px;
     width: 100%;
     background-color: #3347B0;
     display: flex;
@@ -204,12 +255,8 @@ footer{
 }
 
 .contatos img{
-    height: 70%;
+    height: 50%;
     width: auto;
-}
-
-.contatos h3{
-    margin-top: 7%;
 }
 
 .copyright{
@@ -225,6 +272,6 @@ footer{
 }
 
 .redesSociais img{
-    height: 35%;
+    height: 25%;
     width: auto;
 }
