--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ main{
 }
 
 .tela2{
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 30px;
     min-height: 100vh;
@@ -170,7 +170,7 @@ main{
 }
 
 .tela3{
-    display: flex;
+    display: none;
     width: 100%;
     justify-content: space-between;
     padding: 2%;
