--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ main{
     display: flex;
     padding: 2%;
     flex: 1;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .tela1{
@@ -163,6 +164,10 @@ main{
     gap: 5%;
 }
 
+.card:hover {
+    background-color: #6B7EF5;
+}
+
 .card img{
     height: 60%;
     width: auto;
@@ -235,15 +240,17 @@ main{
 .coluna{
     height: 85%;
     width: 60%;
-    border: 0.5px solid black;
+    border: 0.2px solid black;
     display: flex;
     align-items: flex-end;
+    border-radius: 15px;
 }
 
 .preenchimento{
     width: 100%;
     /* height: 90%; */
     background-color: #3347B0;
+    border-radius: 15px;
 }
 
 footer{
@@ -271,6 +278,7 @@ footer{
     height: 30%;
     width: 100%;
     gap: 3%;
+    color: white;
 }
 
 .contatos img{
@@ -280,6 +288,7 @@ footer{
 
 .copyright{
     height: 20%;
+    color: white;
 }
 
 .redesSociais{
